crates/goby-cli/tests/fixtures/parse_error_expected.txt
crates/goby-cli/tests/fixtures/parse_error_input.gb:1:3: error: unexpected indentation at top level
1 |   bad_indented : Int
  |   ^
